--- a/week02/mission2/src/App.css
+++ b/week02/mission2/src/App.css
@@ -1,42 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/*  포스터 일단 자동 정렬   */
+.movie-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill);
+  gap: 20px;
+  grid-auto-rows: 1fr;
+}
+
+.movie-item {
+  position: relative;
+  cursor: pointer;
+}
+
+.movie-poster {
+  width: 100%;
+  border-radius: 10px;
+}
+
+/* 마우스가 올라갔을 때의 효과 */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+/* 마우스가 영화 포스터에 올라갔을 때 overlay가 나타나도록 */
+.movie-item:hover .overlay {
+  opacity: 1;
+}
+
+.movie-title {
   text-align: center;
+  font-size: 16px;
+  margin: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* 반응형 처리: 가로 2행만 유지 */
+@media (min-width: 0) {
+  .movie-list {
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
