feat : (미션2) 포스터 정렬
포스터 가로로 10장 씩 그리드 사용해서 정렬

--- a/week02/mission_02/src/App.css
+++ b/week02/mission_02/src/App.css
@@ -1,3 +1,13 @@
-#Input_Area{
+.movie_area{
+    display: grid;
+    gap:10px;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+
+    background-color: rebeccapurple;
+}
+
+.movie_element{
     border: 1px solid black;
+    width: 50px;
+    height: auto;
 }
