feat : (미션2) 화면 어둡게 적용
CSS의 hover와 filter: brightness 사용하여 이미지를 어둡게 만듦

--- a/week02/mission_02/src/App.css
+++ b/week02/mission_02/src/App.css
@@ -11,3 +11,8 @@
     width: 50px;
     height: auto;
 }
+
+.movie_element:hover{
+    border: 1px solid rebeccapurple;
+    filter: brightness(0.5);
+}
