style : 화면 스타일 수정
배경색상 제거, 레디우스 적용, 보더 제거

--- a/week02/mission_02/src/App.css
+++ b/week02/mission_02/src/App.css
@@ -2,17 +2,14 @@
     display: grid;
     gap:10px;
     grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-
-    background-color: rebeccapurple;
 }
 
 .movie_element{
-    border: 1px solid black;
-    width: 50px;
+    border-radius: 5px;
+    width: 100%;
     height: auto;
 }
 
 .movie_element:hover{
-    border: 1px solid rebeccapurple;
     filter: brightness(0.5);
 }
