2주차 최종본

--- a/week02/Movie mission2/src/App.css
+++ b/week02/Movie mission2/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.movie-poster-container:hover .overlay {
+  opacity: 1;
+}
